Adding network ping every 2 seconds

--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
@@ -15,8 +15,12 @@
   <:col :let={{_id, parking}} label="Nom"><%= parking.nom %></:col>
   <:col :let={{_id, parking}} label="Places"><%= parking.places %></:col>
   <:col :let={{_id, parking}} label="Capacite"><%= parking.capacite %></:col>
-  <:col :let={{_id, parking}} label="Derniere mise a jour base"><%= parking.derniere_mise_a_jour_base %></:col>
-  <:col :let={{_id, parking}} label="Derniere actualisation bo"><%= parking.derniere_actualisation_bo %></:col>
+  <:col :let={{_id, parking}} label="Derniere mise a jour base">
+    <%= parking.derniere_mise_a_jour_base %>
+  </:col>
+  <:col :let={{_id, parking}} label="Derniere actualisation bo">
+    <%= parking.derniere_actualisation_bo %>
+  </:col>
   <:col :let={{_id, parking}} label="Taux doccupation"><%= parking.taux_doccupation %></:col>
   <:col :let={{_id, parking}} label="Geo point 2d"><%= parking.geo_point_2d %></:col>
   <:col :let={{_id, parking}} label="Parking"><%= parking.parking_id %></:col>
@@ -36,7 +40,12 @@
   </:action>
 </.table>
 
-<.modal :if={@live_action in [:new, :edit]} id="parking-modal" show on_cancel={JS.patch(~p"/parkings")}>
+<.modal
+  :if={@live_action in [:new, :edit]}
+  id="parking-modal"
+  show
+  on_cancel={JS.patch(~p"/parkings")}
+>
   <.live_component
     module={ErwanWeb.ParkingLive.FormComponent}
     id={@parking.id || :new}
