--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/show.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/show.html.heex
@@ -21,7 +21,12 @@
 
 <.back navigate={~p"/parkings"}>Back to parkings</.back>
 
-<.modal :if={@live_action == :edit} id="parking-modal" show on_cancel={JS.patch(~p"/parkings/#{@parking}")}>
+<.modal
+  :if={@live_action == :edit}
+  id="parking-modal"
+  show
+  on_cancel={JS.patch(~p"/parkings/#{@parking}")}
+>
   <.live_component
     module={ErwanWeb.ParkingLive.FormComponent}
     id={@parking.id}
