--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
@@ -22,7 +22,7 @@
     <%= parking.derniere_actualisation_bo %>
   </:col>
   <:col :let={{_id, parking}} label="Taux doccupation"><%= parking.taux_doccupation %></:col>
-  <:col :let={{_id, parking}} label="Geo point 2d"><%= parking.geo_point_2d %></:col>
+  <:col :let={{_id, parking}} label="Geo point 2d"><%= parking.geo_point_2d |> inspect() %></:col>
   <:col :let={{_id, parking}} label="Parking"><%= parking.parking_id %></:col>
   <:action :let={{_id, parking}}>
     <div class="sr-only">
