--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/show.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/show.html.heex
@@ -15,7 +15,7 @@
   <:item title="Derniere mise a jour base"><%= @parking.derniere_mise_a_jour_base %></:item>
   <:item title="Derniere actualisation bo"><%= @parking.derniere_actualisation_bo %></:item>
   <:item title="Taux doccupation"><%= @parking.taux_doccupation %></:item>
-  <:item title="Geo point 2d"><%= @parking.geo_point_2d %></:item>
+  <:item title="Geo point 2d"><%= @parking.geo_point_2d |> inspect() %></:item>
   <:item title="Parking"><%= @parking.parking_id %></:item>
 </.list>
 
