--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
@@ -1,3 +1,8 @@
+Test
+
+<.live_component module={ErwanWeb.Live.VegaGraph} id="vega" />
+<!-- content={arobase content} -->
+
 <.header>
   Listing Parkings
   <:actions>
