feature(live select): adding dynamic select to see kino/vega lite graph animated depending on parking choice

--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
@@ -1,7 +1,25 @@
-Test
+Visu data parking live :<br /><br />
 
-<.live_component module={ErwanWeb.Live.VegaGraph} id="vega" />
-<!-- content={arobase content} -->
+<.form for={@select_parking} phx-change="parking_selected">
+  <.input
+    label="Liste des parkings"
+    id="parking-list-select-id"
+    type="select"
+    name="parking_chosen"
+    value=""
+    options={@select_parking}
+  >
+  </.input>
+</.form>
+
+<br /><br />
+<%= if (@selected_parking != nil) do %>
+  <.live_component
+    module={ErwanWeb.Live.VegaGraph}
+    id="vega"
+    selected_parking={@selected_parking}
+  />
+<% end %>
 
 <.header>
   Listing Parkings
