feature(Tous les parking): adding color, better ecto requests for Vega

--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
@@ -6,6 +6,7 @@ Visu data parking live :<br /><br />
     id="parking-list-select-id"
     type="select"
     name="parking_chosen"
+    prompt="Sélectionnez un parking"
     value=""
     options={@select_parking}
   >
