feature(ajout parkings la rochelle)

--- a/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/live/parking_live/index.html.heex
@@ -38,12 +38,15 @@
       id="vega"
       selected_parking={@selected_parking}
       select_axis_display={@select_axis_display}
+      module_name={@module_name}
     />
   </.form>
 <% end %>
 <br /><br />
 <br /><br />
 
+<span><.link navigate={~p"/"}>Retour Accueil</.link></span>
+<br />
 <.header>
   Listing Parkings
   <:actions>
