--- a/elixir_repo/erwan/lib/erwan_web/controllers/page_html/home.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/controllers/page_html/home.html.heex
@@ -169,7 +169,28 @@
                   stroke-linejoin="round"
                 />
               </svg>
-              Voir Parkings
+              Voir Parkings de Poitiers
+            </span>
+          </a>
+
+          <a
+            href={~p"/rochelle_parkings"}
+            class="group relative rounded-2xl px-6 py-4 text-sm font-semibold leading-6 text-zinc-900 sm:py-6"
+          >
+            <span class="absolute inset-0 rounded-2xl bg-zinc-50 transition group-hover:bg-zinc-100 sm:group-hover:scale-105">
+            </span>
+            <span class="relative flex items-center gap-4 sm:flex-col">
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true" class="h-6 w-6">
+                <path d="m12 4 10-2v18l-10 2V4Z" fill="#18181B" fill-opacity=".15" />
+                <path
+                  d="M466.605,6.27H45.396C23.787,6.27,6.27,23.787,6.27,45.396v421.208  c0,21.609,17.517,39.126,39.126,39.126h421.208c21.609,0,39.126-17.517,39.126-39.126V45.396  C505.732,23.787,488.214,6.27,466.605,6.27z"
+                  stroke="#18181B"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              Voir Parkings de la Rochelle
             </span>
           </a>
 
