--- a/elixir_repo/erwan/lib/erwan_web/controllers/page_html/home.html.heex
+++ b/elixir_repo/erwan/lib/erwan_web/controllers/page_html/home.html.heex
@@ -153,7 +153,7 @@
           </a>
 
           <a
-            href="http://localhost:4004/sessions/gjqaeq3wgpr5b7g6kti3nh4v3qdx55qyxeyiwvkb?token=7376zlbeyihs7bbtmq7zkspahl7lhwr7"
+            href="http://51.68.126.96:4004/sessions/gjqaeq3wgpr5b7g6kti3nh4v3qdx55qyxeyiwvkb?token=7376zlbeyihs7bbtmq7zkspahl7lhwr7"
             class="group relative rounded-2xl px-6 py-4 text-sm font-semibold leading-6 text-zinc-900 sm:py-6"
           >
             <span class="absolute inset-0 rounded-2xl bg-zinc-50 transition group-hover:bg-zinc-100 sm:group-hover:scale-105">
