fix(limit to 100) - ecto returns all the rows, the web controller doesnt seem to handle

--- a/elixir_repo/erwan/lib/adel_web/live/parking_rochelle_live/index.html.heex
+++ b/elixir_repo/erwan/lib/adel_web/live/parking_rochelle_live/index.html.heex
@@ -63,6 +63,7 @@
     fn {_id, parking_rochelle} -> JS.navigate(~p"/rochelle_parkings/#{parking_rochelle}") end
   }
 >
+  <:col :let={{_id, parking_rochelle}} label="ID"><%= parking_rochelle.id %></:col>
   <:col :let={{_id, parking_rochelle}} label="Nb places"><%= parking_rochelle.nb_places %></:col>
   <:col :let={{_id, parking_rochelle}} label="Nb autopartage">
     <%= parking_rochelle.nb_autopartage %>
