--- a/elixir_repo/erwan/lib/adel_web/live/parking_live/index.html.heex
+++ b/elixir_repo/erwan/lib/adel_web/live/parking_live/index.html.heex
@@ -61,6 +61,7 @@
   rows={@streams.parkings}
   row_click={fn {_id, parking} -> JS.navigate(~p"/parkings/#{parking}") end}
 >
+  <:col :let={{_id, parking}} label="ID"><%= parking.id %></:col>
   <:col :let={{_id, parking}} label="Nom"><%= parking.nom %></:col>
   <:col :let={{_id, parking}} label="Places"><%= parking.places %></:col>
   <:col :let={{_id, parking}} label="Capacite"><%= parking.capacite %></:col>
